# oop_cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/coins/: coins.h
src/coins/currency/: Currency.cpp  Currency.h
src/coins/currency/crypto/: BlockchainCoin.cpp  BlockchainCoin.h  CryptoCurrency.cpp  CryptoCurrency.h  MemeCoin.cpp  MemeCoin.h  StableCoin.cpp  StableCoin.h
src/coins/currency/fiat/: FiatCurrency.cpp  FiatCurrency.h
src/coins/trader/: Trader.cpp  Trader.h
src/wallet/: Wallet.h
